# pytest-notebook-policy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  backlog.md  great-docs.yml  justfile  prek.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: JUST_SETUP.md  LLM_GUARDRAILS_PREK_BASELINE.md  MANUAL_NOTEBOOK_VALIDATION.md  QUICKSTART.md  README.md  REPORT_INTERPRETATION.md  RULES.md
docs/blog/: announcing-pytest-notebook-policy.md
experiments/jupyter/: clean_deterministic.ipynb  clean_deterministic.py  messy_non_idempotent.ipynb  messy_non_idempotent.py  redefinition_flow.ipynb  redefinition_flow.py
experiments/notebooks/: bad_cross_cell_mutation_notebook.py  bad_non_idempotent_notebook.py  bad_on_change_notebook.py  good_reactive_notebook.py
manual_checks/marimo/: marimo_complex_good.py
reports/fixtures-real/: generation-summary.json
reports/fixtures-real/jupyter/jupyter_connecting_qt_console_v6_4_7/: notebook-policy-nbom.json  notebook-policy-report.md
reports/fixtures-real/jupyter/jupyter_importing_notebooks_v6_4_7/: notebook-policy-nbom.json  notebook-policy-report.md
reports/fixtures-real/jupyter/jupyter_running_code_v6_4_7/: notebook-policy-nbom.json  notebook-policy-report.md
reports/fixtures-real/jupyter/openai_cookbook_assistants_api_overview_42bc4ed/: notebook-policy-nbom.json  notebook-policy-report.md
reports/fixtures-real/marimo/gallery_earthquake/: notebook-policy-nbom.json  notebook-policy-report.md
reports/fixtures-real/marimo/gallery_matrix/: notebook-policy-nbom.json  notebook-policy-report.md
reports/fixtures-real/marimo/marimo_examples_ui_file/: notebook-policy-nbom.json  notebook-policy-report.md
reports/fixtures-real/marimo/marimo_smoke_cross_cell_md/: notebook-policy-nbom.json  notebook-policy-report.md
scripts/: check_python_sql_literals.py  check_text_safety.py  clean_release_artifacts.py  create_manual_examples.py  refresh_real_fixtures.py
src/pytest_marimo/: __init__.py  plugin.py  quality.py
src/pytest_notebook_policy/: __init__.py  plugin.py  quality.py  report_templates.py
tests/: test_notebook_fixtures.py  test_plugin_rules.py  test_quality.py  test_report_regressions.py
tests/fixtures/real/: SOURCES.txt  gallery_earthquake.py  marimo_examples_ui_file.py  marimo_smoke_cross_cell_md.py
tests/fixtures/synthetic/: bad_cross_cell_mutation.py  bad_fixture_in_notebook.py  bad_non_idempotent.py  good_reactive.py  jupyter_bad_inline_defs.ipynb  jupyter_bad_large_notebook.ipynb  jupyter_bad_magic.ipynb  jupyter_bad_non_idempotent.ipynb
tmp/manual_checks/experiments/: pyproject.toml
