[project]
name = "pytest-marimo"
version = "0.1.0"
description = "Pytest plugin for marimo notebook quality checks"
readme = "README.md"
authors = [
    { name = "Michael Booth", email = "michael@databooth.com.au" }
]
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0",
]

[project.scripts]
pytest-marimo-quality = "pytest_marimo.quality:main"

[project.entry-points.pytest11]
marimo = "pytest_marimo.plugin"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
extend-select = ["S"]

[tool.ruff.lint.per-file-ignores]
"experiments/**/*.ipynb" = ["S311"]
"experiments/**/*.py" = ["B018", "S311"]
"src/pytest_marimo/quality.py" = ["S603"]
"tests/**/*.py" = ["S101"]
"tests/fixtures/**/*.py" = ["B018", "S311"]
